--- a/src/pages/404/404.css
+++ b/src/pages/404/404.css
@@ -4,6 +4,8 @@
     font-size: 3rem;
     position: relative;
     margin: 10rpx;
+    font-weight: bold;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .sleep{
