--- a/src/pages/game/game.css
+++ b/src/pages/game/game.css
@@ -46,7 +46,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size:2em
+    font-size:3em
 }
 
 
@@ -72,9 +72,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size:2em;
+    font-size:2.7em;
     color:red;
     font-weight: bolder;
+    font-family:monospace;
 }
 
 .score{
@@ -174,7 +175,6 @@
     opacity: 1;
 }
 
-
 .gesturetext {
     color: white;
     font-size: 20px;
@@ -184,3 +184,7 @@
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
+
+.colortext{
+    color:blue;   
+}
